[gd_scene load_steps=9 format=3 uid="uid://df7d5dg4xkyjh"]

[ext_resource type="Script" uid="uid://n40o66s8dq2a" path="res://src/Options.gd" id="1_n8lk3"]
[ext_resource type="PackedScene" uid="uid://d0oil5f17c368" path="res://src/ui/MarcoCelular.tscn" id="2_midhk"]
[ext_resource type="Texture2D" uid="uid://7fpt3ry1q1ar" path="res://assets/boton.png" id="4_upto5"]
[ext_resource type="FontFile" uid="uid://baqvpre2xhvpx" path="res://fonts/PublicPixel.ttf" id="4_xedm1"]
[ext_resource type="Texture2D" uid="uid://cd462skwkdeff" path="res://assets/Parlante.png" id="5_n8lk3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_upto5"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_slider"]
content_margin_left = 0.0
content_margin_top = 20.0
content_margin_right = 0.0
content_margin_bottom = 20.0
bg_color = Color(0.3, 0.3, 0.3, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_grabber_area"]
content_margin_left = 0.0
content_margin_top = 20.0
content_margin_right = 0.0
content_margin_bottom = 20.0
bg_color = Color(0.4, 0.6, 0.8, 1)

[node name="Options" type="Node"]
script = ExtResource("1_n8lk3")

[node name="MarcoCelular" parent="." instance=ExtResource("2_midhk")]

[node name="Label" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -144.0
offset_top = 120.0
offset_right = 144.0
offset_bottom = 156.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("4_xedm1")
theme_override_font_sizes/font_size = 40
text = "OPCIONES"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Back" type="Button" parent="."]
offset_left = 34.0
offset_top = 91.0
offset_right = 102.0
offset_bottom = 180.0
theme_override_fonts/font = ExtResource("4_xedm1")
theme_override_font_sizes/font_size = 60
theme_override_styles/normal = SubResource("StyleBoxEmpty_upto5")
action_mode = 0
text = "‚Üê"

[node name="VolumeControls" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -305.0
offset_top = -200.5
offset_right = 305.0
offset_bottom = 258.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30

[node name="MasterVolume" type="VBoxContainer" parent="VolumeControls"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="MasterLabel" type="Label" parent="VolumeControls/MasterVolume"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_xedm1")
theme_override_font_sizes/font_size = 34
text = "MASTER"

[node name="MasterSlider" type="HSlider" parent="VolumeControls/MasterVolume"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_icons/grabber = ExtResource("4_upto5")
theme_override_icons/grabber_highlight = ExtResource("4_upto5")
theme_override_icons/grabber_disabled = ExtResource("4_upto5")
theme_override_styles/slider = SubResource("StyleBoxFlat_slider")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_grabber_area")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxFlat_grabber_area")
value = 100.0

[node name="ReelsVolume" type="VBoxContainer" parent="VolumeControls"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="ReelsLabel" type="Label" parent="VolumeControls/ReelsVolume"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_xedm1")
theme_override_font_sizes/font_size = 34
text = "REELS"

[node name="ReelsSlider" type="HSlider" parent="VolumeControls/ReelsVolume"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_icons/grabber = ExtResource("4_upto5")
theme_override_icons/grabber_highlight = ExtResource("4_upto5")
theme_override_icons/grabber_disabled = ExtResource("4_upto5")
theme_override_styles/slider = SubResource("StyleBoxFlat_slider")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_grabber_area")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxFlat_grabber_area")
value = 100.0

[node name="SFXVolume" type="VBoxContainer" parent="VolumeControls"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="SFXLabel" type="Label" parent="VolumeControls/SFXVolume"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_xedm1")
theme_override_font_sizes/font_size = 34
text = "SFX"

[node name="SFXSlider" type="HSlider" parent="VolumeControls/SFXVolume"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_icons/grabber = ExtResource("4_upto5")
theme_override_icons/grabber_highlight = ExtResource("4_upto5")
theme_override_icons/grabber_disabled = ExtResource("4_upto5")
theme_override_styles/slider = SubResource("StyleBoxFlat_slider")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_grabber_area")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxFlat_grabber_area")
value = 100.0

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = 300.0
offset_top = 257.0
offset_right = 400.0
offset_bottom = 356.0
texture = ExtResource("5_n8lk3")

[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
[connection signal="value_changed" from="VolumeControls/MasterVolume/MasterSlider" to="." method="_on_master_slider_value_changed"]
[connection signal="value_changed" from="VolumeControls/ReelsVolume/ReelsSlider" to="." method="_on_reels_slider_value_changed"]
[connection signal="value_changed" from="VolumeControls/SFXVolume/SFXSlider" to="." method="_on_sfx_slider_value_changed"]
